# PPLBenchmark

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements.txt
data/0_raw/: 8schools_data.csv  rugged_data.csv
data/2_models/: .gitignore
docs/: README.md
docs/source/: conf.py  index.md
docs/source/_templates/autoapi/: index.rst
docs/source/_templates/autoapi/python/: module.rst
ppl_benchmark/: __init__.py  __main__.py  config.py  main.py
ppl_benchmark/config/: README.md
ppl_benchmark/config/base/: globals.yml  logging_config.yml  ppl_benchmark.yml
ppl_benchmark/core/: benchmark.py  counter.py  results.py
ppl_benchmark/core/numpyro_backend/: mcmc_inference.py  numpyro_utils.py  svi_inference.py
ppl_benchmark/core/pyro_backend/: mcmc_inference.py  svi_inference.py
ppl_benchmark/models/: README.md  base_model.py  bayesian_regression.py  eight_schools.py
ppl_benchmark/utils/: __init__.py  configuration.py  data_preparation.py  evaluation_utils_numpyro.py  evaluation_utils_pyro.py  git_info.py  helper_functions.py  linear_baesian_results_utils.py  log.py  package.py  scanner.py
ppl_benchmark/utils/proof_of_concept/: example_running_gradient_jax.py  jit_compiled_backward_counting.py
ppl_benchmark/visualisation/: plot_data_visualization.py  schools_plots.py
reports/: .gitignore
tests/: test_unittest.py  test_utils.py
tests/ppl_benchmark/: test_bayesian_linear_regression.py  test_eight_schools.py
