[build-system]
requires = [
    "setuptools >= 60",
    "setuptools_scm[toml] >= 8.0.1",
    # add requirements as your package needs
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "ppl_benchmark/__version__.py"
git_describe_command = "git describe --tags --match v* "

[tool.setuptools.packages.find]
include = ["ppl_benchmark"]

[project]
name = "MCL_PPL_Benchmark"
dynamic = ["version"]  # Die Version wird von setuptools_scm aus dem Git-Tag extrahiert, beginnend mit 'v...'
readme = "README.md"
authors = [
    { name="Christian Findenig", email="christian.findenig@mcl.at" }
]
requires-python = ">=3.9"
dependencies = [
    "setuptools_scm >=8.0.1",
    "pyyaml >=5.3",
    "matplotlib >=3.8.4",
    # add dependencies as your package needs
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: BSD-3",
    "Operating System :: OS Independent"
]

[project.optional-dependencies]
docs = [
    "setuptools_scm",
    "sphinx",
    "myst-nb",
    "sphinx-autoapi>=3",
    "sphinx-book-theme",
    "graphviz",
    "sphinx-design",
    "sphinx-proof",
    "wheel",
    # add optional dependencies as your package needs
]

[project.scripts]
scanner = "ppl_benchmark.utils.scanner:main"
package = "ppl_benchmark.utils.package:main"
